<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>game.server.manager</groupId>
        <artifactId>game-server-manager</artifactId>
        <version>1.0.0</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>game-server-manager-mybatis-plus</artifactId>
    <version>1.0.0</version>
    <name>game-server-manager-mybatis-plus</name>

    <description>game-server-manager-mybatis-plus</description>

    <properties>
        <java.version>17</java.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-common</artifactId>
            <version>1.0.0</version>
        </dependency>


        <!--  数据库相关-->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-boot-starter</artifactId>
            <version>3.5.2</version>
        </dependency>

    </dependencies>

</project>
